--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@ description: Track and optimize your sales team in real time
 		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
 		<p class="subtext editable">Track and optimize your sales team in real time.</p>
 		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Get Started Free</a></div>
-		<div>
-			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-		</div>
+		
 	</div>
 </section>
 
 <div class="content">
+	<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
 	<section>
 		<div class="container flex">
 			<div class="text editable">
