--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,12 @@ heading: Get in touch today
 
 map:
 
-  address: "1 George Street, Dunedin, New Zealand"
+  address: "Mynet Group Limited,
+Rooms 05-15, 13A/F,
+South Tower, World Finance Centre,
+Harbour City 17 Canton Road,
+Tsim Sha Tsui, Kowloon,
+Hong Kong"
 
 ---
 
