--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@ description: Track and optimize your sales team in real time
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Get Started Free</a></div>
+		<h1 class="editable"><strong>Mynet Group</strong></h1>
+		<p class="subtext editable"></p>
+		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Get in touch</a></div>
 		
 	</div>
 </section>
 
 <div class="content">
-	<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
+	<h1 class="subtext editable"> <strong></strong></h1>
 	<section>
 		<div class="container flex">
 			<div class="text editable">
@@ -37,17 +37,6 @@ description: Track and optimize your sales team in real time
 		</div>
 	</section>
 
-	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
-			</div>
-			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-			</div>
-		</div>
-	</section>
 
 
 
