--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@ Hong Kong"
 
 
 <div class="contact-box">
-	<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
+	<form action="https://formspree.io/f/mleklaqe" method="post" class="contact-form">
 		<input type="hidden" name="_to" value="support@example.com" />
 		<input type="text" name="_gotcha" style="display: none;">
 
