--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ description: Track and optimize your sales team in real time
 		<div class="container flex">
 			<div class="text editable">
 				<h2><strong>BizPal</strong></h2>
-				<p>Hinnovative products for businesses and consumers. </p>
+				<p>Empowering businesses and consumers to optimize performace, operations and workflows for their business. </p>
 			</div>
 			<div class="image">
 				<img src="https://cdn.shopify.com/s/files/1/0604/0810/3050/files/resize_Picture1_2048x.png" alt="Screenshot" class="screenshot editable" />
@@ -28,11 +28,11 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
+				<h2><strong>Trip Mate</strong></h2>
 				<p>innovative products for businesses and consumers.</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="https://cdn.shopify.com/s/files/1/0595/3686/7381/files/4F8C7BAB-FFC7-4C40-982F-D7ED16AC79CD_4_5005_c.jpg" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
