--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@ description: Track and optimize your sales team in real time
 <section class="hero">
 	<div class="text-container">
 		<h1 class="editable"><strong>Mynet Group</strong></h1>
-		<p class="subtext editable"></p>
+		<p class="subtext editable">Bringing the best products to customers</p>
 		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Get in touch</a></div>
 		
 	</div>
 </section>
 
 <div class="content">
-	<h1 class="subtext editable"> <strong></strong></h1>
+	<h1 class="subtext editable"> <strong>Our Brands</strong></h1>
 	<section>
 		<div class="container flex">
 			<div class="text editable">
 				<h2><strong>BizPal</strong></h2>
-				<p>Founded in the U.S., BizPal is a trusted Brand for innovative products for businesses and consumers. Empowering businesses and consumers to optimize performace, operations and workflows for their business. </p>
+				<p>Founded in the U.S., BizPal is a trusted brand for innovative products for businesses and consumers. Empowering businesses and consumers to optimize performace, operations and workflows for their business. </p>
 			</div>
 			<div class="image">
 				<img src="https://cdn.shopify.com/s/files/1/0604/0810/3050/files/resize_Picture1_2048x.png" alt="Screenshot" class=" editable" />
