--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@ description: Track and optimize your sales team in real time
 	<div class="text-container">
 		<h1 class="editable"><strong>Mynet Group</strong></h1>
 		<p class="subtext editable">Bringing the best products to customers</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Get in touch</a></div>
+		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Get In Touch</a></div>
 		
 	</div>
 </section>
 
 <div class="content">
+	<h1 class="subtext editable"> <strong> </strong></h1>
+
 	<h1 class="subtext editable"> <strong>Our Brands</strong></h1>
 	<section>
 		<div class="container flex">
