--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: Mynet Grou
+description: Bringing the best products to customers
 ---
 <section class="hero">
 	<div class="text-container">
@@ -12,7 +12,7 @@ description: Track and optimize your sales team in real time
 </section>
 
 <div class="content">
-	<h1 class="subtext editable"> <strong> </strong></h1>
+	<h1 class="subtext editable"> <strong> &nbsp;</strong></h1>
 
 	<h1 class="subtext editable"> <strong>Our Brands</strong></h1>
 	<section>
