--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ description: Bringing the best products to customers
 			<div class="text editable">
 				<h2><strong>BizPal</strong></h2>
 				<p>Founded in the U.S., BizPal is a trusted brand for innovative products for businesses and consumers. Empowering businesses and consumers to optimize performace, operations and workflows for their business. </p>
+				<p>Website: <a target="_blank" href="https://bizpalsupplies.com">https://bizpalsupplies.com</a></p>
 			</div>
 			<div class="image">
 				<img src="https://cdn.shopify.com/s/files/1/0604/0810/3050/files/resize_Picture1_2048x.png" alt="Screenshot" class=" editable" />
@@ -32,6 +33,8 @@ description: Bringing the best products to customers
 			<div class="text editable">
 				<h2><strong>Trip Mate</strong></h2>
 				<p>The flagship brand within the Mynet Group Limited portfolio, was founded in the US. For years, Trip Mate is dedicated to provide high quality but affordable products for travelers worldwide.</p>
+				<p>Website: <a target="_blank" href="https://tripmategear.com">https://tripmategear.com</a></p>
+
 			</div>
 			<div class="image">
 				<img src="https://cdn.shopify.com/s/files/1/0595/3686/7381/files/4F8C7BAB-FFC7-4C40-982F-D7ED16AC79CD_4_5005_c.jpg" alt="Screenshot" class=" editable" />
