--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@ Hong Kong"
 
 	<div class="contact-details">
 		<h3 class="editable">Address</h3>
-		<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
+		<address>{{ page.map.address | replace: ", ", ", <br>" }}</address>
 
 	</div>
 </div>
